[tool.poetry]
name = "pytest-kube"
version = "0.1.2"
description = "Pytest plugin to run tests on Kubernetes"
authors = ["Tobias Bradtke <webwurst@gmail.com>"]

[tool.poetry.plugins.pytest11]
pytest-kind = "pytest_kube.plugin"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.3"
pytest-kind = "20.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
